--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1488,30 +1488,123 @@ $$\blacklozenge$$
 A rigid body turns about a fixed point $O$in a flat space of $N$ dimensions. prove that if $N$ is odd, there exists at any instant a line $OP$ of particles instantaneously at rest, but that, if $N$ is even, no point other than $O$ is, in general, instantaneously at rest. Show that if $N=4$, there are are points oher than $O$ instantaneously at rest if, and only if,
 $$\omega_{23}\omega_{14}+\omega_{31}\omega_{24}+\omega_{12}\omega_{34}=0$$
 \end{tcolorbox} 
+Consider $\mathbf{5.310}$
+\begin{align}
+v_p &= - \omega_{pr}z_{r}
+\end{align}
+What we seek, is a vector $z_{r}$ so that 
+\begin{align}
+v_p &= - \theta \omega_{pr}z_{r} = 0 \quad \theta \in\mathbb{R}
+\end{align}
+which means that we have to solve the homogeneous system of linear equations
+\begin{align}
+\Omega \mathbf{z} =0
+\end{align}
+with $\Omega$ the skew-symmetric matrix containing the elements of the tensor $\omega_{pr}$.
+From algebra, we know that when the dimension of a skew-symmetric matrix is odd, then it's determinant is zero, and hence the homogeneous system will have an infinity of solutions that can be of the  form $z_r = a_rZ_N \quad r=\{1,2,\dots, N-1\}$, (we take the last coordinate as free parameter). This represents a line along which, all velocities are zero.\\
+On the contrary if $N$ is even, the determinant might be non-zero and the system will not have any solution except the trivial solution $z_r=0$.\\
+$$\lozenge$$\\
+Let's investigate this for $N=4$. We have for $(3)$:
+\begin{align}
+\Omega =\left( \begin{matrix}
+0&\omega_{12}&\omega_{13}&\omega_{14}\\
+-\omega_{12}&0&\omega_{23}&\omega_{24}\\
+-\omega_{13}&-\omega_{23}&0&\omega_{34}\\
+-\omega_{14}&-\omega_{24}&-\omega_{34}&0
+\end{matrix}\right)
+\end{align}
+giving
+\begin{align}
+\det{\Omega} &=-\omega_{12}\left|\begin{array}{lll} -\omega_{12}&\omega_{23}&\omega_{24}\\
+-\omega_{13}&0&\omega_{34}\\
+-\omega_{14}&-\omega_{34}&0\\
+\end{array}\right|+\omega_{13}\left|\begin{array}{lll} -\omega_{12}&0&\omega_{24}\\
+-\omega_{13}&-\omega_{23}&\omega_{34}\\
+-\omega_{14}&-\omega_{24}&0\\
+\end{array}\right|-\omega_{14}\left|\begin{array}{lll} -\omega_{12}&0&\omega_{23}\\
+-\omega_{13}&-\omega_{23}&0\\
+-\omega_{14}&-\omega_{24}&-\omega_{34}\\
+\end{array}\right|\\
+&= \left\{\begin{array}{l}-\omega_{12}\left( -\omega_{12}\omega_{34}\omega_{34}-\omega_{23}\omega_{14}\omega_{34}+\omega_{24}\omega_{13}\omega_{34} \right)\\
++\omega_{13}\left(- \omega_{12}\omega_{14}\omega_{34} +\omega_{24}\left( \omega_{13}\omega_{24}-\omega_{23}\omega_{14}\right)\right)\\
+-\omega_{14}\left(- \omega_{12}\omega_{23}\omega_{34} +\omega_{23}\left( \omega_{13}\omega_{24}-\omega_{23}\omega_{14}\right)\right)\end{array}\right.\\
+&= \left\{\begin{array}{l}+\omega_{12}\omega_{12}\omega_{34}\omega_{34}+\omega_{12}\omega_{14}\omega_{23}\omega_{34}-\omega_{12}\omega_{13}\omega_{24}\omega_{34} \\
+- \omega_{12}\omega_{13}\omega_{14}\omega_{34} + \omega_{13}\omega_{13}\omega_{24}\omega_{24}-\omega_{13}\omega_{14}\omega_{23}\omega_{24}\\
++ \omega_{12}\omega_{14}\omega_{23}\omega_{34} - \omega_{13}\omega_{14}\omega_{23}\omega_{24}+\omega_{14}\omega_{14}\omega_{23}\omega_{23}\end{array}\right.
+\end{align}
+Define
+\begin{align}
+\left\{\begin{array}{l}
+A= \omega_{12}\omega_{34}\\
+B=\omega_{13}\omega_{24}\\
+C=\omega_{14}\omega_{23}
+\end{array}\right.
+\end{align}
+then we can write $(7)$ as 
+\begin{align}
+\det{\Omega}&= A^2+B^2+C^2 -2AB-2BC+2AB\\
+&= \left(A-B+C\right)^2
+\end{align}
+So, in the space of even dimensions,the system of homogeneous linear equations will have non-trivial solutions, only if $$\omega_{12}\omega_{34}-\omega_{13}\omega_{24}+\omega_{14}\omega_{23}=0$$$$\lozenge$$
+\textbf{Let's find now some possible instantaneous lines of rotation.}\\
+Suppose $N$=4.\\
+Let's define a line with 
+\begin{align}
+\left(z_r\right) = \theta\left( \begin{matrix}
+\omega_{23}-\omega_{24}+\omega_{34}\\ 
+-\omega_{13}+\omega_{14}+\omega_{34}\\ 
+\omega_{12}-\omega_{14}-\omega_{24}\\ 
+-\omega_{12}+\omega_{13}+\omega_{23}
+\end{matrix}\right)
+\end{align}
+Then calculating the velocities with $(1)$ we get
+\begin{align}
+\left( \begin{matrix}v_1\\
+v_2\\
+v_3\\
+v_4\end{matrix}\right) &= -\theta\left( \begin{matrix}
+0&\omega_{12}&\omega_{13}&\omega_{14}\\
+-\omega_{12}&0&\omega_{23}&\omega_{24}\\
+-\omega_{13}&-\omega_{23}&0&\omega_{34}\\
+-\omega_{14}&-\omega_{24}&-\omega_{34}&0
+\end{matrix}\right)\left( \begin{matrix}
+\omega_{23}-\omega_{24}+\omega_{34}\\ 
+-\omega_{13}+\omega_{14}+\omega_{34}\\ 
+\omega_{12}-\omega_{14}-\omega_{24}\\ 
+-\omega_{12}+\omega_{13}+\omega_{23}
+\end{matrix}\right)\\
+&= -\theta\left( \begin{matrix}
+\omega_{12}\omega_{34}-\omega_{13}\omega_{24}+\omega_{14}\omega_{23}\\ 
+-\omega_{12}\omega_{34}+\omega_{13}\omega_{24}-\omega_{14}\omega_{23}\\
+-\omega_{12}\omega_{34}+\omega_{13}\omega_{24}-\omega_{14}\omega_{23}\\
+-\omega_{12}\omega_{34}+\omega_{13}\omega_{24}-\omega_{14}\omega_{23}
+\end{matrix}\right)
+\end{align}
+So the velocities will vanish when$$\omega_{12}\omega_{34}-\omega_{13}\omega_{24}+\omega_{14}\omega_{23}=0$$
+$$\blacklozenge$$\\
 Suppose $N$ is odd. Let's define the following vector
 \begin{align}
-\omega_{i_1}= \epsilon_{i_{1} i_{2} \dots i_{N}}\prod_{k=1}^{\frac{N-1}{2}}\omega_{i_{2k} i_{2k+1}}
+\omega_{i_1}= \frac{1}{2^{\frac{N-1}{2}}\frac{N-1}{2}!}\epsilon_{i_{1} i_{2} \dots i_{N}}\prod_{k=1}^{\frac{N-1}{2}}\omega_{i_{2k} i_{2k+1}}
 \end{align}
 and a line
 \begin{align}
 z_{i_1} = \theta \omega_{i_1}\quad (\theta \in \mathbb{R})
 \end{align}
 First we note that $\omega_{i_1}$ (and hence $z_{i_1}$) is not a null-vector:\\
-Let's consider in $(1)$ the terms consisting of the permutation of the sequence of pairs $$\left\{\left( i_2,i_3 \right),\left( i_4,i_5 \right),\left( i_6,i_7\right),\dots ,\left( i_{N-1},i_N \right)\right\}$$ This sequence contains $\frac{N-1}{2}$ pairs and so can be arranged in $\frac{N-1}{2}!$ ways. As for each pair we have two valid possibilities e.g. $\left( i_2,i_3 \right)$ and $\left( i_3,i_2 \right)$ and as a sequence contains $\frac{N-1}{2}$ pairs, we will have for a given order of pairs $2^{\frac{N-1}{2}}$ possibilities. So in $(1)$ there will be $2^{\frac{N-1}{2}}\frac{N-1}{2}!$ terms consisting of the permutation of the sequence of pairs $\left\{\left( i_2,i_3 \right),\left( i_4,i_5 \right),\left( i_6,i_7\right),\dots ,\left( i_{N-1},i_N \right)\right\}$.\\
+Let's consider in $(14)$ the terms consisting of the permutation of the sequence of pairs $$\left\{\left( i_2,i_3 \right),\left( i_4,i_5 \right),\left( i_6,i_7\right),\dots ,\left( i_{N-1},i_N \right)\right\}$$ This sequence contains $\frac{N-1}{2}$ pairs and so can be arranged in $\frac{N-1}{2}!$ ways. As for each pair we have two valid possibilities e.g. $\left( i_2,i_3 \right)$ and $\left( i_3,i_2 \right)$ and as a sequence contains $\frac{N-1}{2}$ pairs, we will have for a given order of pairs $2^{\frac{N-1}{2}}$ possibilities. So in $(1)$ there will be $2^{\frac{N-1}{2}}\frac{N-1}{2}!$ terms consisting of the permutation of the sequence of pairs $\left\{\left( i_2,i_3 \right),\left( i_4,i_5 \right),\left( i_6,i_7\right),\dots ,\left( i_{N-1},i_N \right)\right\}$.\\
 Without loss of generality, suppose that $\epsilon_{i_{1} i_{2} \dots i_{N}}$ is positive and also all $\omega_{i_{2k} i_{2k+1}}$ are positive.
 Let's first consider a permutation of two pairs in the sequence $\left\{\left( i_2,i_3 \right),\left( i_4,i_5 \right),\left( i_6,i_7\right),\dots ,\left( i_{N-1},i_N \right)\right\}$. Obviously, this does not change the product of the $\omega_{i_{2k} i_{2k+1}}$. Also $\epsilon_{i_{1} i_{2} \dots i_{N}}$ will hold it's initial sign as the considered permutation needs two permutation of indices.\\
 Next consider a permutation in one of the pairs of the sequence. Obviously $\epsilon_{i_{1} i_{2} \dots i_{N}}$ will change sign but also the picked $\omega_{i_{2k} i_{2k+1}}$(skew-symmetric). \\
 Conclusion, all $2^{\frac{N-1}{2}}\frac{N-1}{2}!$ terms can be reduced to the sum of $2^{\frac{N-1}{2}}\frac{N-1}{2}!$ of a same quantity and the  $\omega_{i_1}$ will not trivially be zero.\\
 Let's consider now $\mathbf{5.310}$
 \begin{align}
-v_p &= - \omega_{pi_{1}}z_{i_{1}}\\
-\text{(2):}\spatie v_p &= -\theta \epsilon_{i_{1} i_{2} \dots i_{N}}\omega_{pi_{1}}\prod_{k=1}^{\frac{N-1}{2}}\omega_{i_{2k} i_{2k+1}}
+v_p &= -  \omega_{pi_{1}}z_{i_{1}}\\
+\text{(14):}\spatie v_p &= -\frac{1}{2^{\frac{N-1}{2}}\frac{N-1}{2}!}\theta \epsilon_{i_{1} i_{2} \dots i_{N}}\omega_{pi_{1}}\prod_{k=1}^{\frac{N-1}{2}}\omega_{i_{2k} i_{2k+1}}
 \end{align}
-On the right side, for having a non-zero term, we need that $p\ne i_{1}$ ( $\omega_{st}$ skew-symmetric ). This leaves us with only $N-1$ possible choices in the indices but as $\epsilon_{i_{1} i_{2} \dots i_{N}}$ needs $N$ mutual different indices it is obvious that each term in $(4)$ will have a $\epsilon_{i_{1} i_{2} \dots i_{N}}= 0$ \\
-Conclusion, all $v_p$are zero and hence the defined line in $(2)$ is an instantaneous line of rotation.
+On the right side, for having a non-zero term, we need that $p\ne i_{1}$ ( $\omega_{st}$ skew-symmetric ). This leaves us with only $N-1$ possible choices in the indices but as $\epsilon_{i_{1} i_{2} \dots i_{N}}$ needs $N$ mutual different indices it is obvious that each term in $(17)$ will have a $\epsilon_{i_{1} i_{2} \dots i_{N}}= 0$ \\
+Conclusion, all $v_p$ are zero and hence the defined line in $(15)$ is an instantaneous line of rotation.
 \\
-What about $N$is even?\\
-Obviously we can't construct a vector the way we did for the odd case.
+
 $$\blacklozenge$$
 \newpage 
 
