--- a/images/fig_p183_5561_a.tex
+++ b/images/fig_p183_5561_a.tex
@@ -1,15 +1,15 @@
 \tdplotsetmaincoords{70}{130}
 \begin{tikzpicture}[tdplot_main_coords,scale=5]
-		%% Définition des différents styles
+		%%Styles
 		\tikzstyle{init} = [black];			% observers base
 		\tikzstyle{prec} = [blue]	;		% second rotation
 		\tikzstyle{nuta} = [red]	;		% second rotation
-		\tikzstyle{rotp} = [purple];		% thrid rotation
+		\tikzstyle{rotp} = [brown];		% thrid rotation
 		\tikzstyle{base} = [thick,-Latex]	;% basis
 		\tikzstyle{angle} = [thick,-latex]	;%angles
 		\tikzstyle{circle} = [thin,dashed]	;%circles
  
-		%% Paramètres géométriques		
+		%Parameters	
 		\def\epsi{15};	%  precession angle
 		\def\etheta{25};	% nutation angle
 		\def\ethetatwo{25};	% nutation angle helping
@@ -19,42 +19,50 @@
 		%% 
 		% observers basis
 		\coordinate (O) at (0,0,0);
-		\draw[base,init] (O) -- (1,0,0) node[anchor=north east]{$\overrightarrow{x}$};
+		\draw[base,init] (O) -- (1.,0,0) node[anchor=north east]{$\overrightarrow{x}$};
 		\draw[dashed,thick,init] (O) -- (-1,0,0) node[anchor=north east]{$$};
 		\draw[base,init] (O) -- (0,1,0) node[anchor=north east]{$\overrightarrow{y}$};
-		\draw[base,init] (O) -- (0,0,1) node[anchor=south]{$\overrightarrow{z} $};
- 
+		\draw[base,init] (O) -- (0,0,1) node[anchor=north west]{$\overrightarrow{z} $};
+		\coordinate (Z0) at (0,0,1.4);
+		%\draw[tdplot_rotated_coords,blue,, dashed ] (0,-1.2,0) --(0,-1,0) node[anchor=west]{$$};
+		\draw[blue,thick, dashed ] (0,0,1) --(Z0) node[anchor=west]{$$};
+
+		
+		
 		% Precession
 		\tdplotsetrotatedcoords{\epsi}{0}{0};
-		\draw[tdplot_rotated_coords,angle,prec] (O) --(1,0,0) node[anchor=north east]{$\overrightarrow{u}$};
-		\draw[tdplot_rotated_coords,angle,prec] (O) --(0,1,0) node[anchor=west]{$\overrightarrow{N}$};
-		\draw[tdplot_rotated_coords,thick,prec] (O) --(0,-1,0) node[anchor=west]{$$};
-		
+		\draw[tdplot_rotated_coords,angle,prec] (O) --(1,0,0) node[anchor=north west]{$\overrightarrow{u}$};
+		\draw[tdplot_rotated_coords,angle,blue,ultra  thick] (O) --(0,1,0) node[anchor=north west,]{$\overrightarrow{N}$};
+		\draw[tdplot_rotated_coords,thick,prec,,ultra  thick] (O) --(0,-1,0) node[anchor=west]{$$};
 		%\tdplotdrawarc[tdplot_rotated_coords,circle,prec]{(0,0,0)}{1}{0}{360}{}{};
-		\tdplotdrawarc[tdplot_rotated_coords,ultra thick,,prec,dashed,-Latex]{(0,0,0.95)}{0.1}{-300}{90}{}{};
-		\coordinate (psi) at (0,0.1,0.95);
-		\draw[](psi) node[{anchor= west},blue] {$\dot{\psi}$};
+		\tdplotdrawarc[tdplot_rotated_coords,ultra thick,,prec,dashed,-Latex]{(0,0,1.25)}{0.15}{-350}{10}{}{};
+		\coordinate (psi) at (0,0.1,1.4);
+		\draw[](psi) node[{anchor= west},blue] {$1^{st}\rightarrow \dot{\psi}$};
 		%\draw plot [mark=*, mark size=0.10] coordinates{(0,0,0.95)}; 
 		\tdplotdrawarc[tdplot_rotated_coords,black,ultra thick]{(0,0,0)}{1}{-90}{90}{}{}	;
 		\tdplotdrawarc[tdplot_rotated_coords,dashed,black,ultra thick]{(0,0,0)}{1}{90}{270}{}{}	;		
 		\tdplotdrawarc[tdplot_rotated_coords,angle,prec]{(0,0,0)}{\rang}{90-\epsi}{90}{anchor=north east,prec}{$\psi$};	
 		\tdplotdrawarc[tdplot_rotated_coords,angle,prec]{(0,0,0)}{\rang}{-\epsi}{0}{anchor=north east,prec}{$\psi$};	
- 
+		\draw[tdplot_rotated_coords,red,thick, dashed ] (0,1.4,0) --(0,1,0) node[anchor=west]{$$};
+		\draw[tdplot_rotated_coords,red,thick,, dashed ] (0,-1.2,0) --(0,-1,0) node[anchor=west]{$$};
+		
 		% Nutation
 		\tdplotsetrotatedcoords{\epsi}{\ethetatwo}{0};
 		\tdplotdrawarc[tdplot_rotated_coords,rotp,ultra thick]{(0,0,0)}{1}{90}{270}{}{};
-		\draw[tdplot_rotated_coords,dashed,,thick,nuta] (O) --(-1,0,0) node[anchor=north east]{$$};
+		\draw[tdplot_rotated_coords,,nuta] (O) --(-1,0,0) node[anchor=north east]{$$};
 		\tdplotsetrotatedcoords{\epsi}{\etheta}{0};
 		\draw[tdplot_rotated_coords,base,nuta] (O) --(1,0,0) node[anchor=north east]{$\overrightarrow{x}_0$};
-		\draw[tdplot_rotated_coords,base,nuta] (O) --(0,0,1) node[anchor=south east]{$\overrightarrow{z}_1$};
+		\draw[tdplot_rotated_coords,base,nuta] (O) --(0,0,1) node[anchor=west]{$\overrightarrow{z}_1$};
 		\tdplotsetrotatedthetaplanecoords{0};
 		\tdplotdrawarc[tdplot_rotated_coords,circle,dashdotted,red]{(0,0,0)}{1}{0}{360}{}{}	;	
 		\tdplotdrawarc[tdplot_rotated_coords,angle,nuta]{(0,0,0)}{\rang}{90-\etheta}{90}{anchor=south west,nuta}{$\theta$};		
 		\tdplotdrawarc[tdplot_rotated_coords,angle,nuta]{(0,0,0)}{\rang}{-\etheta}{0}{anchor=north,nuta}{$\theta$};
-		\tdplotdrawarc[tdplot_rotated_coords,ultra thick,nuta,dashed,-Latex]{(0,0,0.90)}{0.1}{-300}{90}{}{};		
- 		\coordinate (theta) at (0,1.105,0.2);
-		\draw[](theta) node[{anchor= west},red] {$\dot{\theta}$};
+		\tdplotdrawarc[tdplot_rotated_coords,ultra thick,nuta,dashed,-Latex]{(0,0,1.3)}{0.15}{-340}{80}{}{};		
+ 		\coordinate (theta) at (0,1.6,0.4);
+		\draw[](theta) node[{anchor= west},red] {$2^{nd}\rightarrow\dot{\theta}$};
 		%\draw plot [mark=*, mark size=0.510] coordinates{(0,0.95,0.2)}; 
+		
+		
 		% Spin
 		\tdplotsetrotatedcoords{\epsi}{\etheta}{\ephi};
 		\draw[tdplot_rotated_coords,base,rotp] (O) --(1,0,0) node[anchor=north]{$\overrightarrow{x}_1$};
@@ -63,7 +71,21 @@
 		\tdplotdrawarc[tdplot_rotated_coords,ultra thick,rotp]{(0,0,0)}{1}{-87}{90}{}{};		
 		\tdplotdrawarc[tdplot_rotated_coords,angle,rotp]{(0,0,0)}{\rang}{90-\ephi}{90}{anchor=west,rotp}{$\varphi$}	;	
 		\tdplotdrawarc[tdplot_rotated_coords,angle,rotp]{(0,0,0)}{\rang}{-\ephi}{0}{anchor=north,rotp}{$\varphi$};	
-		\tdplotdrawarc[tdplot_rotated_coords,ultra thick,,rotp,dashed,-Latex]{(0,0,0.90)}{0.1}{0}{360}{}{};		
- 		\coordinate (phi) at (0,-0.34,0.47);
-		\draw[](phi) node[{anchor=west},rotp] {$\dot{\phi}$};
+		\tdplotdrawarc[tdplot_rotated_coords,ultra thick,,rotp,dashed,-Latex]{(0,0,1.43)}{0.15}{0}{360}{}{};		
+ 		\coordinate (phi) at (0,-0.9,0.9);
+		\draw[](phi) node[{anchor=west},rotp] {$3^{rd}\rightarrow\dot{\phi}$};
+		\draw[tdplot_rotated_coords,brown,thick,, dashed ] (0,0,1) --(0,0,1.64) node[anchor=west]{$$};
+		% Base
+		\tdplotsetrotatedcoords{0}{0}{0};
+		\draw[tdplot_rotated_coords,gray,  fill=white,,thick](0,0,0) circle[radius=0.4pt];
+		\draw[tdplot_rotated_coords,gray,  fill=white,,thick](0,0,1.25) circle[radius=0.4pt];
+		% Precession
+		\tdplotsetrotatedcoords{\epsi}{0}{0};
+		\draw[tdplot_rotated_coords,gray,  fill=white,,thick](0,-1,0) circle[radius=0.4pt];
+		\draw[tdplot_rotated_coords,gray,  fill=white,,thick](0,1,0) circle[radius=0.4pt];
+		\draw[tdplot_rotated_coords,gray,  fill=white,,thick](0,1.3,0) circle[radius=0.4pt];
+		% Nutation
+		\tdplotsetrotatedcoords{\epsi}{\ethetatwo}{0};
+		\draw[tdplot_rotated_coords,gray, fill=white, thick](-1,0,0) circle[radius=0.4pt];
+		\draw[tdplot_rotated_coords,gray, fill=white, thick](0,0,1.430) circle[radius=0.4pt];
 		\end{tikzpicture};
